# lector

./: Cargo.toml
.github/workflows/: ci.yaml
src/: lib.rs
static/: index.html
