[package]
name = "lector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
url = "2"
readability-rust = "0.1.0"
html2md = "0.2"
regex = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
serde_json = "1.0"
scraper = "0.18.1"

[[bin]]
name = "lector"
path = "src/bin/web.rs"

[[bin]]
name = "lector-cli"
path = "src/bin/cli.rs"
